// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render Expenses summary with 1 expense 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should correctly render Expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    viewing 
    23
     
    expenses
     totalling 
    $26,489,461,657.35
  </h1>
</div>
`;
